--- a/src/pages/contact.mdx
+++ b/src/pages/contact.mdx
@@ -4,12 +4,11 @@ title: Contact
 
 # Contact
 
-You may <a href="https://calendly.com/udin/30min" target='_blank' alt='link' rel='noopener noreferrer' >schedule a 30 minutes meeting</a> with me.
 - <highlight  color="#1877F2">E-mail: udin [at] sejong [dot] ac [dot] kr</highlight>
 - Phone: +82-2-3408-1879
 - Address
- 	- in Korean: 05006 서울특별시 광진구 능동로 209 (군자동) 세종대학교, 대양AI센터 502호
-	- in English: No. 502, Daeyang AI Center, Sejong University, 209 Neungdong-ro, Gwangjin-gu, Seoul 05006, Republic of Korea
+ 	- (Korean) 05006 서울특별시 광진구 능동로 209 (군자동) 세종대학교, 대양AI센터 502호
+	- (English) Room No. 502, Daeyang AI Center, Sejong University, 209 Neungdong-ro, Gwangjin-gu, Seoul 05006, Republic of Korea
 
 <div class="map-responsive">
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3163.1382684578657!2d127.07144581532079!3d37.55180603272926!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357ca4d0720eecc1%3A0x1a7ad975c6b5e4eb!2sSejong%20University!5e0!3m2!1sen!2skr!4v1664505677205!5m2!1sen!2skr" frameborder="0" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
