--- a/src/pages/publications.mdx
+++ b/src/pages/publications.mdx
@@ -3,7 +3,7 @@ title: Publications
 ---
 
 # Publications
-The output of our research and projects has been presented and published in many outlets, including local and international conferences as well as reputable peer-reviewed journals. 
+The output of our research and projects has been presented and published in many outlets, including local and international conferences as well as reputable international peer-reviewed journals. For a comprehensive and up-to-date list of publications, please refer to the following links.
 
 Links: <a target='_blank' alt='link' rel='noopener noreferrer' href='https://www.webofscience.com/wos/author/record/1733012'>[WebofScience]</a> - <a target='_blank' alt='link' rel='noopener noreferrer' href='https://www.scopus.com/authid/detail.uri?authorId=57197741727'>[Scopus]</a> - <a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.co.kr/citations?user=WLTzkOMAAAAJ&hl=en'>[GoogleScholar]</a> 
 
@@ -11,50 +11,83 @@ Links: <a target='_blank' alt='link' rel='noopener noreferrer' href='https://www
 <br/>
 <br/>
 
+### [J] Journal Articles
+<ol reversed>
+<li>Nasir, I.M., Raza, M., Ulyah, S.M., Shah, J.H., Fitriyani, N.L., Syafrudin, M.* (2023) ENGA: Elastic Net-Based Genetic Algorithm for Human Action Recognition. Expert Systems with Applications, 227, 120311, doi:10.1016/j.eswa.2023.120311.</li>
+<li>Ramaha, N.T.A., Mahmood, R.M., Hameed, A.A., Fitriyani, N.L., Alfian, G., Syafrudin, M.* (2023) Brain Pathology Classification of MR Images Using Machine Learning Techniques. Computers, 12, 167, doi:10.3390/computers12080167.</li>
+<li>Isia, I., Hadibarata, T., Jusoh, M.N.H., Bhattacharjya, R.K., Shahedan, N.F., Fitriyani, N.L., Syafrudin, M.* (2023) Identifying Factors to Develop and Validate Social Vulnerability to Floods in Malaysia: A Systematic Review Study. Sustainability, 15, 12729, doi:10.3390/su151712729.</li>
+<li>Fitriyani, N.L., Syafrudin, M.*, Ulyah, S.M., Alfian, G., Qolbiyani, S.L., Yang, C.-K., Rhee, J., Anshari, M. (2023) Performance Analysis and Assessment of Type 2 Diabetes Screening Scores in Patients with Non-Alcoholic Fatty Liver Disease. Mathematics, 11, 2266, doi:10.3390/math11102266.</li>
+<li>Maarif, M.R., Saleh, A.R., Habibi, M., Fitriyani, N.L., Syafrudin, M.* (2023) Energy Usage Forecasting Model Based on Long Short-Term Memory (LSTM) and EXplainable Artificial Intelligence (XAI). Information, 14, 265, doi:10.3390/info14050265.</li>
+<li>Alfian, G., Syafrudin, M.*, Fitriyani, N.L., Alam, S., Pratomo, D.N., Subekti, L., Octava, M.Q.H., Yulianingsih, N.D., Atmaji, F.T.D., Benes, F. (2023) Utilizing Random Forest with IForest-Based Outlier Detection and SMOTE to Detect Movement and Direction of RFID Tags. Future Internet, 15, 103, doi:10.3390/fi15030103.</li>
+<li>Anshari, M., Syafrudin, M.*, Tan, A., Fitriyani, N.L., Alas, Y. (2023) Optimisation of Knowledge Management (KM) with Machine Learning (ML) Enabled. Information, 14, 35, doi:10.3390/info14010035.</li>
+<li>Al-Dulaimi, A.A., Guneser, M.T., Hameed, A.A., Márquez, F.P.G., Fitriyani, N.L., Syafrudin, M.* (2023) Performance Analysis of Classification and Detection for PV Panel Motion Blur Images Based on Deblurring and Deep Learning Techniques. Sustainability, 15, 1150, doi:10.3390/su15021150.</li>
+<li>Zhao, W., Syafrudin, M.*, Fitriyani, N.L. (2023) CRAS-YOLO: A Novel Multi-Category Vessel Detection and Classification Model Based on YOLOv5s Algorithm. IEEE Access, 11, 11463–11478, doi:10.1109/ACCESS.2023.3241630.</li>
+<li>Isia, I., Hadibarata, T., Jusoh, M.N.H., Bhattacharjya, R.K., Shahedan, N.F., Bouaissi, A., Fitriyani, N.L., Syafrudin, M.* (2023) Drought Analysis Based on Standardized Precipitation Evapotranspiration Index and Standardized Precipitation Index in Sarawak, Malaysia. Sustainability, 15, 734, doi:10.3390/su15010734.</li>
+<li>Prananda, A.R., Frannita, E.L., Hutami, A.H.T., Maarif, M.R., Fitriyani, N.L., Syafrudin, M.* (2023) Retinal Nerve Fiber Layer Analysis Using Deep Learning to Improve Glaucoma Detection in Eye Disease Assessment. Applied Sciences, 13, 37, doi:10.3390/app13010037.</li>
+<li>Anshari, M., Syafrudin, M.*, Fitriyani, N.L., Razzaq, A. (2022) Ethical Responsibility and Sustainability (ERS) Development in a Metaverse Business Model. Sustainability, 14, 15805, doi:10.3390/su142315805.</li>
+<li>Fitriyani, N.L., Syafrudin, M.*, Ulyah, S.M., Alfian, G., Qolbiyani, S.L., Anshari, M. (2022) A Comprehensive Analysis of Chinese, Japanese, Korean, US-PIMA Indian, and Trinidadian Screening Scores for Diabetes Risk Assessment and Prediction. Mathematics, 10, 4027.</li>
+<li>Maarif, M. R., Listyanda, R. F., Kang, Y. S., & Syafrudin, M.* (2022). Artificial Neural Network Training Using Structural Learning with Forgetting for Parameter Analysis of Injection Molding Quality Prediction. Information, 13(10), 488.</li>
+<li>Alfian, G., <b>Syafrudin, M.*</b>, Fahrurrozi, I., Fitriyani, N.L., Atmaji, F.T.D., Widodo, T., Bahiyah, N., Benes, F., Rhee, J. Predicting Breast Cancer from Risk Factors Using SVM and Extra-Trees-Based Feature Selection Method. <i>Computers</i> 2022, 11, 136, doi:10.3390/computers11090136. <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.3390/computers11090136'>[Link]</a></li>
+<li>Anshari, M., <b>Syafrudin, M.*</b>, Fitriyani, N.L. Fourth Industrial Revolution between Knowledge Management and Digital Humanities. <i>Information</i> 2022, 13, 292, doi:10.3390/info13060292. <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.3390/info13060292'>[Link]</a></li>
+<li>Kristanti, R.A., Hadibarata, T., <b>Syafrudin, M.</b>, Yılmaz, M., Abdullah, S. Microbiological Contaminants in Drinking Water: Current Status and Challenges. <i>Water Air Soil Pollut 2022</i>, 233, 299, <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1007/s11270-022-05698-3'>[Link]</a></li>
+<li>Hadibarata, T., <b>Syafrudin, M.</b> Writing Essay as Essential Assessment in Groundwater Contamination Course. <i>Acta Pedagogia Asia 2022</i>, 1, 9–17, <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.53623/apga.v1i1.66'>[Link]</a>.</li>
+<li>Choong, W.S., Hadibarata, T., Yuniarto, A., Tang, K.H.D., Abdullah, F., <b>Syafrudin, M.</b>, Al Farraj, D.A., Al-Mohaimeed, A.M. Characterization of Microplastics in the Water and Sediment of Baram River Estuary, Borneo Island. <i>Marine Pollution Bulletin 2021</i>, 172, 112880, <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1016/j.marpolbul.2021.112880'>[Link]</a> <i>(SCIE, IF Top 1.327% (2/113) in MARINE & FRESHWATER BIOLOGY, based on JCR 2021)</i>
+</li>
+<li><b>Syafrudin, M.</b>, Kristanti, R.A., Yuniarto, A., Hadibarata, T., Rhee, J., Al-onazi, W.A., Algarni, T.S., Almarri, A.H., Al-Mohaimeed, A.M. Pesticides in Drinking Water—A Review. <i>IJERPH 2021</i>, 18, 468, <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.3390/ijerph18020468'>[Link]</a> <i>(SSCI, IF Top 23.580% (42/176) in PUBLIC, ENVIRONMENTAL & OCCUPATIONAL HEALTH, based on JCR 2020)</i>.
+</li>
+<li>Alfian, G., <b>Syafrudin, M.*</b>, Anshari, M., Benes, F., Atmaji, F.T.D., Fahrurrozi, I., Hidayatullah, A.F., Rhee, J. Blood glucose prediction model for type 1 diabetes based on artificial neural network with time-domain features. <i>Biocybernetics and Biomedical Engineering 2020</i>, 40, 1586–1599. <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1016/j.bbe.2020.10.004'>[Link]</a> <i>(SCIE, IF Top 45.402% (40/87) in ENGINEERING, BIOMEDICAL, based on JCR 2019)</i></li>
+<li>Alfian, G., <b>Syafrudin, M.*</b>, Fitriyani, N.L., Anshari, M., Stasa, P., Svub, J., Rhee, J. Deep Neural Network for Predicting Diabetic Retinopathy from Risk Factors. <i>Mathematics 2020</i>, 8, 1620. <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.3390/math8091620'>[Link]</a> <i>(SCIE, IF Top 8.488% (28/324) in MATHEMATICS, based on JCR 2019)</i></li>
+<li><b>Syafrudin, M.</b>, Alfian, G., Fitriyani, N.L., Anshari, M., Hadibarata, T., Fatwanto, A., Rhee, J. A Self-Care Prediction Model for Children with Disability Based on Genetic Algorithm and Extreme Gradient Boosting. <i>Mathematics 2020</i>, 8, 1590. <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.3390/math8091590'>[Link]</a> <i>(SCIE, IF Top 8.488% (28/324) in MATHEMATICS, based on JCR 2019)</i></li>
+<li>Fitriyani, N.L., <b>Syafrudin, M.*</b>, Alfian, G., Rhee, J. HDPM: An Effective Heart Disease Prediction Model for a Clinical Decision Support System. <i>IEEE Access 2020</i>, 8, pp. 1-17. <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1109/access.2020.3010511'>[Link]</a> <i>(SCIE, IF Top 22.115% (35/156) in COMPUTER SCIENCE, INFORMATION SYSTEMS, based on JCR 2019)</i></li>
+<li>Alfian, G., <b>Syafrudin, M.</b>, Farooq, U., Ma’arif, M.R., Syaekhoni, M.A., Fitriyani, N.L., Jaeho, L., Rhee, J. Improving Efficiency of RFID-based Traceability System for Perishable Food by Utilizing IoT Sensors and Machine Learning Model. <i>Food Control 2020</i>, 110, 107016. <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1016/j.foodcont.2019.107016'>[Link]</a> <i>(SCIE, IF Top 7.778% (11/135) in FOOD SCIENCE & TECHNOLOGY, based on JCR 2018)</i></li>
+<li>Anuar, F.I., Hadibarata, T., <b>Syafrudin, M.</b>, Fona, Z. Removal of Procion Red MX- 5B from aqueous solution by adsorption on Parkia speciosa (stink bean) peel powder. <i>Biointerface Res Appl Chem 2020</i>, 10, 4774–4779, <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.33263/BRIAC101.774779'>[Link]</a></li>
+<li>Fitriyani, N.L., <b>Syafrudin, M.*</b>, Alfian, G., Rhee, J. Development of Disease Prediction Model Based on Ensemble Learning Approach for Diabetes and Hypertension. <i>IEEE Access 2019</i>, 7, pp. 144777-144789. <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1109/ACCESS.2019.2945129'>[Link]</a> <i>(SCIE, IF Top 14.516% (23/155) in COMPUTER SCIENCE, INFORMATION SYSTEMS, based on JCR 2018)</i></li>
+<li>Alfian, G., <b>Syafrudin, M.</b>, Yoon, B., Rhee, J. False Positive RFID Detection Using Classification Models. <i>Appl. Sci. 2019</i>, 9, 1154. <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.3390/app9061154'>[Link]</a> <i>(SCIE, IF Top 44.932% (67/148) in PHYSICS, APPLIED, based on JCR 2018)</i></li>
+<li><b>Syafrudin, M.*</b>, Fitriyani, N.L., Alfian, G., Rhee, J. An Affordable Fast Early Warning System for Edge Computing in Assembly Line. <i>Appl. Sci. 2019</i>, 9, 84. <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.3390/app9010084'>[Link]</a> <i>(SCIE, IF Top 44.932% (67/148) in PHYSICS, APPLIED, based on JCR 2018)</i></li>
+<li>Alfian, G., Ijaz, M.F., <b>Syafrudin, M.</b>, Syaekhoni, M.A., Fitriyani, N.L., Rhee, J. Customer Behavior Analysis using Real-time Data Processing: A Case Study of Digital Signage-based Online Stores. <i>Asia Pacific Journal of Marketing and Logistics 2019</i>, 31, 265–290. <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1108/APJML-03-2018-0088'>[Link]</a> <i>(SSCI, IF Top 79.252% (117/147) in BUSINESS, based on JCR 2018)</i></li>
+<li><b>Syafrudin, M.</b>, Alfian, G., Fitriyani, N.L., Rhee, J. Performance Analysis of IoT-Based Sensor, Big Data Processing, and Machine Learning Model for Real-Time Monitoring System in Automotive Manufacturing. <i>Sensors 2018</i>, 18, 2946. <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.3390/s18092946'>[Link]</a> <i>(SCIE, IF Top 23.770% (15/61) in INSTRUMENTS & INSTRUMENTATION, based on JCR 2018)</i></li>
+<li>Ijaz, M.F., Alfian, G., <b>Syafrudin, M.</b>, Rhee, J. Hybrid Prediction Model for Type 2 Diabetes and Hypertension Using DBSCAN-Based Outlier Detection, Synthetic Minority Over Sampling Technique (SMOTE, and Random Forest. <i>Appl. Sci. 2018</i>, 8, 1325. <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.3390/app8081325'>[Link]</a> <i>(SCIE, IF Top 44.932% (67/148) in PHYSICS, APPLIED, based on JCR 2018)</i></li>
+<li>Alfian, G., <b>Syafrudin, M.</b>, Ijaz, M.F., Syaekhoni, M.A., Fitriyani, N.L., Rhee, J. A Personalized Healthcare Monitoring System for Diabetic Patients by Utilizing BLE-Based Sensors and Real-Time Data Processing. <i>Sensors 2018</i>, 18, 2183. <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.3390/s18072183'>[Link]</a> <i>(SCIE, IF Top 25.410% (16/61) in INSTRUMENTS & INSTRUMENTATION, based on JCR 2017)</i></li>
+<li><b>Syafrudin, M.</b>, Fitriyani, N.L., Li, D., Alfian, G., Rhee, J., Kang, Y.-S. An Open Source-Based Real-Time Data Processing Architecture Framework for Manufacturing Sustainability. <i>Sustainability 2017</i>, 9, 2139. <a target='_blank' alt='link' rel='noopener noreferrer' href='http://dx.doi.org/10.3390/su9112139'>[Link]</a> <i>(SSCI, IF Top 41.667% (3/6) in GREEN & SUSTAINABLE SCIENCE & TECHNOLOGY, based on JCR 2017)</i></li>
+<li>Alfian, G., <b>Syafrudin, M.</b>, Rhee, J. Real-Time Monitoring System Using Smartphone-Based Sensors and NoSQL Database for Perishable Supply Chain. <i>Sustainability 2017</i>, 9, 2073. <a target='_blank' alt='link' rel='noopener noreferrer' href='http://dx.doi.org/10.3390/su9112073'>[Link]</a> <i>(SSCI, IF Top 41.667% (3/6) in GREEN & SUSTAINABLE SCIENCE & TECHNOLOGY, based on JCR 2017)</i></li>
+<li>Alfian, G., Rhee, J., Ijaz, M.F., <b>Syafrudin, M.</b>, Fitriyani, N.L. Performance Analysis of a Forecasting Relocation Model for One-Way Carsharing. <i>Appl. Sci. 2017</i>, 7, 598. <a target='_blank' alt='link' rel='noopener noreferrer' href='http://dx.doi.org/10.3390/app7060598'>[Link]</a> <i>(SCIE, IF Top 50.338% (75/148) in PHYSICS, APPLIED, based on JCR 2016)</i></li>
+</ol>
 
 
+### [C] Conference Proceedings
+<ol reversed>
+<li>Lee, A., <b>Syafrudin, M.</b>, Gu, Y., Park, S., Kim, M., Lee, Y. A Personalized Restaurant Recommendation Based on Topic Modeling of Online Reviews. In Proceedings of the 2023 International Conference on Innovation and Intelligence for Informatics, Computing, and Technologies (3ICT) (3ICT2023); Bahrain, Bahrain, November 2023; p. 6.<a target='_blank' alt='link' rel='noopener noreferrer' href='#'>[Link]</a></li>
+<li>Sugiantoro, B., Humam, A.I., Fitriyani, N.L., Alfian, G., Maarif, M.R., <b>Syafrudin, M.</b> Utilizing Latent Dirichlet Allocation for Analyzing Topics in Undergraduate Theses. In Proceedings of the 2023 10th International Conference on Information Technology, Computer, and Electrical Engineering (ICITACEE) (ICITACEE 2023); Indonesia, August 2023; p. 6. <a target='_blank' alt='link' rel='noopener noreferrer' href='#'>[Link]</a>
+</li>
+<li><b>Syafrudin, M.</b>, Alfian, G., Fitriyani, N.L., Hadibarata, T., Rhee, J., Anshari, M. Future Glycemic Events Prediction Model Based On Artificial Neural Network. In Proceedings of the 2022 International Conference on Innovation and Intelligence for Informatics, Computing, and Technologies (3ICT); IEEE: Sakheer, Bahrain, November 20 2022; pp. 151–155.<a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1109/3ICT56508.2022.9990708'>[Link]</a></li>
+<li>Fitriyani, N. L., <b>Syafrudin, M.</b>, Alfian, G., Yang, C. K., Rhee, J., & Ulyah, S. M. Chronic Disease Prediction Model Using Integration of DBSCAN, SMOTE-ENN, and Random Forest. In 2022 ASU International Conference in Emerging Technologies for Sustainability and Intelligent Systems (ICETSIS) (pp. 289-294). IEEE.<a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1109/ICETSIS55481.2022.9888806'>[Link]</a></li>
+<li><b>Syafrudin, M.</b>, Alfian, G., Fitriyani, N. L., Fahrurrozi, I., Anshari, M., & Rhee, J. A Personalized Blood Glucose Prediction Model Using Random Forest Regression. In 2022 ASU International Conference in Emerging Technologies for Sustainability and Intelligent Systems (ICETSIS) (pp. 295-299). IEEE.<a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1109/ICETSIS55481.2022.9888838'>[Link]</a></li>
+<li>Fitriyani, N. L., <b>Syafrudin, M.</b>, & Alfian, G. Improving Accuracy of Machine Learning-Based Prediction Model for Heart Disease Classification Using Information Gain and DBSCAN. In KMIS International Conference (pp. 506-509).<a target='_blank' alt='link' rel='noopener noreferrer' href='https://www.earticle.net/Article/A416370'>[Link]</a></li>
+<li><b>Syafrudin, M.</b>, Fitriyani, N. L., & Alfian, G. Forecasting Blood Glucose Using Extreme Gradient Boosting Regression Model. In KMIS International Conference (pp. 501-505).<a target='_blank' alt='link' rel='noopener noreferrer' href='https://www.earticle.net/Article/A416369'>[Link]</a></li>
+<li>Fitriyani, N.L., <b>Syafrudin, M.</b>, Alfian, G., Fatwanto, A., Qolbiyani, S.L., Rhee, J. Prediction Model for Type 2 Diabetes Using Stacked Ensemble Classifiers. In Proceedings of the 2020 International Conference on Decision Aid Sciences and Application (DASA), IEEE: Sakheer, Bahrain, November 8 2020, pp. 399–402.<a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1109/DASA51403.2020.9317090'>[Link]</a></li>
+<li><b>Syafrudin, M.</b>, Alfian, G., Fitriyani, N.L., Sidiq, A.H., Tjahjanto, T., Rhee, J. Improving Efficiency of Self-Care Classification Using PCA and Decision Tree Algorithm. In Proceedings of the 2020 International Conference on Decision Aid Sciences and Application (DASA), IEEE: Sakheer, Bahrain, November 8 2020, pp. 224–227.<a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1109/DASA51403.2020.9317243'>[Link]</a></li>
+<li>Alfian, G., <b>Syafrudin, M.</b>, Fitriyani, N.L., Rhee, J., Ma’arif, M.R., Riadi, I. Traceability System Using IoT and Forecasting Model for Food Supply Chain. In Proceedings of the 2020 International Conference on Decision Aid Sciences and Application (DASA), IEEE: Sakheer, Bahrain, November 8 2020, pp. 903–907.<a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1109/DASA51403.2020.9317011'>[Link]</a></li>
+<li>Alfian, G., <b>Syafrudin, M.</b>, Rhee, J., Anshari, M., Mustakim, M., Fahrurrozi, I. Blood Glucose Prediction Model for Type 1 Diabetes based on Extreme Gradient Boosting. <i>IOP Conference Series: Materials Science and Engineering 2020</i>, 803, 012012. <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1088/1757-899x/803/1/012012'>[Link]</a></li>
+<li>Alfian, G., <b>Syafrudin, M.</b>, Rhee, J., Stasa, P., Mulyanto, A., Fatwanto, A. In-store Customer Shopping Behavior Analysis by Utilizing RFID-enabled Shelf and Multilayer Perceptron Model. <i>IOP Conference Series: Materials Science and Engineering 2020</i>, 803, 012022. <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1088/1757-899x/803/1/012022'>[Link]</a></li>
+<li>Alfian, G., <b>Syafrudin, M.</b>, Jaeho, L., Rhee, J. Detecting Movement and Direction of Tags for RFID Gate. <i>2019 5th International Conference on Science and Technology (ICST)</i>. July 30–31. Yogyakarta, Indonesia <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1109/ICST47872.2019.9166196'>[Link]</a></li>
+<li><b>Syafrudin, M.</b>, Lee, K., Alfian, G., Jaeho, L., Rhee, J. Application of Bluetooth Low Energy-Based Real-Time Location System for Indoor Environments. <i>2018 2nd International Conference on Big Data and Internet of Things</i>. October 24 - 26. Beijing, China: ACM Digital Library. <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1145/3289430.3289470'>[Link]</a></li>
+<li>Alfian, G., Ijaz, M.F., <b>Syafrudin, M.</b>, Jaeho, L., Rhee, J. A Low Cost IoT-based Traceability System for Perishable Food Supply Chain. <i>The 2018 World Congress on Information Technology Applications and Services</i>. February 20-22. Jeju, Korea: KIPS.</li>
+<li><b>Syafrudin, M.</b>, Lee, K., Fitriyani, N.L., Alfian, G., Rhee, J. Real time monitoring system based on IoT sensor data for assembly line process in the automotive factory. <i>Korean Society of Manufacturing Technology Engineers Annual Autumn Conference 2017</i>. December 6-8. Jeju, Korea: KSMTE. <a target='_blank' alt='link' rel='noopener noreferrer' href='http://www.dbpia.co.kr/Journal/ArticleDetail/NODE07285510'>[Link]</a></li>
+<li><b>Syafrudin, M.</b>, Lee, K., Fitriyani, N.L., Alfian, G., Rhee, J. Development of Real-time Prediction System Based on Random Forest Algorithm in Smart Factory. <i>Korea Business Intelligence Data Mining Society Fall Conference 2017</i>. November 24-25. Busan, Korea: KDMS. <a target='_blank' alt='link' rel='noopener noreferrer' href='http://kdms.or.kr/board/read.asp?table=notice&m_no=253'>[Link]</a></li>
+<li>Kang, Y.-S, <b>Syafrudin, M.</b>, Fitriyani, N.L., Won, J., Lee, Y.-H., Rhee, J. Development of Distributed Processing System for Real-time Sensor Data : Injection Molding Process. <i>Proceedings of Korean Society for Precision Engineering 2017 Spring Conference</i>. May 17-19. Jeju, Korea: KSPE, 574-574. <a target='_blank' alt='link' rel='noopener noreferrer' href='http://www.dbpia.co.kr/Journal/ArticleDetail/NODE07205708'>[Link]</a></li>
+<li>Fitriyani, N.L., Yang, C-K., <b>Syafrudin, M.</b> Real-time eye state detection system using haar cascade classifier and circular hough transform. <i>2016 IEEE 5th Global Conference on Consumer Electronics</i>. October 11-14. Kyoto, Japan: IEEE. <a target='_blank' alt='link' rel='noopener noreferrer' href='http://ieeexplore.ieee.org/document/7800424/'>[Link]</a></li>
+<li><b>Syafrudin, M.</b>, Lee, Y.-H. A Quality Prediction as a Service for Manufacturing Small and Medium-sized Enterprises (SMEs). <i>International Symposium on Green Manufacturing and Applications 2016</i>. June 21-25. Bali, Indonesia: KSPE and ISGMA. <a target='_blank' alt='link' rel='noopener noreferrer' href='http://2016.isgma.org/data/2016/04-ISGMA2016_pdf.zip'>[Link]</a></li>
+</ol>
 
-### 2022
-- Alfian, G., <b>Syafrudin, M.*</b>, Fahrurrozi, I., Fitriyani, N.L., Atmaji, F.T.D., Widodo, T., Bahiyah, N., Benes, F., Rhee, J. Predicting Breast Cancer from Risk Factors Using SVM and Extra-Trees-Based Feature Selection Method. <i>Computers</i> 2022, 11, 136, doi:10.3390/computers11090136. <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.3390/computers11090136'>[Link]</a>
-- Anshari, M., <b>Syafrudin, M.*</b>, Fitriyani, N.L. Fourth Industrial Revolution between Knowledge Management and Digital Humanities. <i>Information</i> 2022, 13, 292, doi:10.3390/info13060292. <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.3390/info13060292'>[Link]</a>
 
-### 2021
-- [B1] Alfian, G., <b>Syafrudin, M.*</b>, Fitriyani, N.L., Syaekhoni, M.A., Rhee, J. Utilizing IoT-Based Sensors and Prediction Model for Health-Care Monitoring System. <i>In Artificial Intelligence and Big Data Analytics for Smart Healthcare</i>; Elsevier, 2021; pp. 63–80 ISBN 978-0-12-822060-3. <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1016/B978-0-12-822060-3.00009-7'>[Link]</a>
+### [B] Books / Chapters
+<ol reversed>
+<li>Anshari, M., <b>Syafrudin, M.</b>, Fitriyani, N.L., Al-Mudimigh, A. Ethical Concerns in the Metaverse Business: In Advances in E-Business Research; Anshari, M., Syafrudin, M., Alfian, G., Eds.; IGI Global, 2023; pp. 35–47 ISBN 978-1-66846-097-9, <a target='_blank' alt='link' rel='noopener noreferrer' href='https://dx.doi.org/10.4018/978-1-6684-6097-9.ch003'>[Link]</a></li>
+<li>Metaverse Applications for New Business Models and Disruptive Innovation:; Anshari, M., <b>Syafrudin, M.</b>, Alfian, G., Eds.; Advances in E-Business Research; IGI Global, 2023; ISBN 978-1-66846-097-9, <a target='_blank' alt='link' rel='noopener noreferrer' href='http://dx.doi.org/10.4018/978-1-6684-6097-9'>[Link]</a></li>
+<li>Alfian, G., <b>Syafrudin, M.*</b>, Fitriyani, N.L., Syaekhoni, M.A., Rhee, J. Utilizing IoT-Based Sensors and Prediction Model for Health-Care Monitoring System. <i>In Artificial Intelligence and Big Data Analytics for Smart Healthcare</i>; Elsevier, 2021; pp. 63–80 ISBN 978-0-12-822060-3. <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1016/B978-0-12-822060-3.00009-7'>[Link]</a></li>
+</ol>
 
-### 2020
-- [J16] Alfian, G., <b>Syafrudin, M.*</b>, Anshari, M., Benes, F., Atmaji, F.T.D., Fahrurrozi, I., Hidayatullah, A.F., Rhee, J. Blood glucose prediction model for type 1 diabetes based on artificial neural network with time-domain features. Biocybernetics and Biomedical Engineering 2020, 40, 1586–1599. <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1016/j.bbe.2020.10.004'>[Link]</a> <i>(SCIE, IF Top 45.402% (40/87) in ENGINEERING, BIOMEDICAL, based on JCR 2019)</i>
-- [J15] Alfian, G., <b>Syafrudin, M.*</b>, Fitriyani, N.L., Anshari, M., Stasa, P., Svub, J., Rhee, J. Deep Neural Network for Predicting Diabetic Retinopathy from Risk Factors. Mathematics 2020, 8, 1620. <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.3390/math8091620'>[Link]</a> <i>(SCIE, IF Top 8.488% (28/324) in MATHEMATICS, based on JCR 2019)</i>
-- [J14] <b>Syafrudin, M.</b>, Alfian, G., Fitriyani, N.L., Anshari, M., Hadibarata, T., Fatwanto, A., Rhee, J. A Self-Care Prediction Model for Children with Disability Based on Genetic Algorithm and Extreme Gradient Boosting. <i>Mathematics 2020</i>, 8, 1590. <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.3390/math8091590'>[Link]</a> <i>(SCIE, IF Top 8.488% (28/324) in MATHEMATICS, based on JCR 2019)</i>
-- [J13] Fitriyani, N.L., <b>Syafrudin, M.*</b>, Alfian, G., Rhee, J. HDPM: An Effective Heart Disease Prediction Model for a Clinical Decision Support System. <i>IEEE Access 2020</i>, 8, pp. 1-17. <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1109/access.2020.3010511'>[Link]</a> <i>(SCIE, IF Top 22.115% (35/156) in COMPUTER SCIENCE, INFORMATION SYSTEMS, based on JCR 2019)</i>	
-- [J12] Alfian, G., <b>Syafrudin, M.</b>, Farooq, U., Ma’arif, M.R., Syaekhoni, M.A., Fitriyani, N.L., Jaeho, L., Rhee, J. Improving Efficiency of RFID-based Traceability System for Perishable Food by Utilizing IoT Sensors and Machine Learning Model. *Food Control 2020*, 110, 107016. <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1016/j.foodcont.2019.107016'>[Link]</a> <i>(SCIE, IF Top 7.778% (11/135) in FOOD SCIENCE & TECHNOLOGY, based on JCR 2018)</i>	
-- [J11] Anuar, F.I., Hadibarata, T., <b>Syafrudin, M.</b>, Fona, Z. Removal of Procion Red MX- 5B from aqueous solution by adsorption on Parkia speciosa (stink bean) peel powder. *Biointerface Res Appl Chem 2020*, 10, 4774–4779, <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.33263/BRIAC101.774779'>[Link]</a>
-- [C10] Alfian, G., <b>Syafrudin, M.</b>, Rhee, J., Anshari, M., Mustakim, M., Fahrurrozi, I. Blood Glucose Prediction Model for Type 1 Diabetes based on Extreme Gradient Boosting. *IOP Conference Series: Materials Science and Engineering 2020*, 803, 012012. <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1088/1757-899x/803/1/012012'>[Link]</a>
-- [C9] Alfian, G., <b>Syafrudin, M.</b>, Rhee, J., Stasa, P., Mulyanto, A., Fatwanto, A. In-store Customer Shopping Behavior Analysis by Utilizing RFID-enabled Shelf and Multilayer Perceptron Model. *IOP Conference Series: Materials Science and Engineering 2020*, 803, 012022. <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1088/1757-899x/803/1/012022'>[Link]</a>
-
-### 2019
-- [J10] Fitriyani, N.L., <b>Syafrudin, M.*</b>, Alfian, G., Rhee, J. Development of Disease Prediction Model Based on Ensemble Learning Approach for Diabetes and Hypertension. <i>IEEE Access 2019</i>, 7, pp. 144777-144789. <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1109/ACCESS.2019.2945129'>[Link]</a> <i>(SCIE, IF Top 14.516% (23/155) in COMPUTER SCIENCE, INFORMATION SYSTEMS, based on JCR 2018)</i>
-- [J9] Alfian, G., <b>Syafrudin, M.</b>, Yoon, B., Rhee, J. False Positive RFID Detection Using Classification Models. *Appl. Sci. 2019*, 9, 1154. <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.3390/app9061154'>[Link]</a> <i>(SCIE, IF Top 44.932% (67/148) in PHYSICS, APPLIED, based on JCR 2018)</i>
-- [J8] <b>Syafrudin, M.*</b>, Fitriyani, N.L., Alfian, G., Rhee, J. An Affordable Fast Early Warning System for Edge Computing in Assembly Line. <i>Appl. Sci. 2019</i>, 9, 84. <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.3390/app9010084'>[Link]</a> <i>(SCIE, IF Top 44.932% (67/148) in PHYSICS, APPLIED, based on JCR 2018)</i>
-- [J7] Alfian, G., Ijaz, M.F., <b>Syafrudin, M.</b>, Syaekhoni, M.A., Fitriyani, N.L., Rhee, J. Customer Behavior Analysis using Real-time Data Processing: A Case Study of Digital Signage-based Online Stores. *Asia Pacific Journal of Marketing and Logistics 2019*, 31, 265–290. <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1108/APJML-03-2018-0088'>[Link]</a> <i>(SSCI, IF Top 79.252% (117/147) in BUSINESS, based on JCR 2018)</i>
-- [C8] Alfian, G., <b>Syafrudin, M.</b>, Jaeho, L., Rhee, J. Detecting Movement and Direction of Tags for RFID Gate. *2019 5th International Conference on Science and Technology (ICST)*. July 30–31. Yogyakarta, Indonesia <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1109/ICST47872.2019.9166196'>[Link]</a>
-
-### 2018
-- [J6] <b>Syafrudin, M.</b>, Alfian, G., Fitriyani, N.L., Rhee, J. Performance Analysis of IoT-Based Sensor, Big Data Processing, and Machine Learning Model for Real-Time Monitoring System in Automotive Manufacturing. *Sensors 2018*, 18, 2946. <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.3390/s18092946'>[Link]</a> <i>(SCIE, IF Top 23.770% (15/61) in INSTRUMENTS & INSTRUMENTATION, based on JCR 2018)</i>
-- [J5] Ijaz, M.F., Alfian, G., <b>Syafrudin, M.</b>, Rhee, J. Hybrid Prediction Model for Type 2 Diabetes and Hypertension Using DBSCAN-Based Outlier Detection, Synthetic Minority Over Sampling Technique (SMOTE, and Random Forest. *Appl. Sci. 2018*, 8, 1325. <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.3390/app8081325'>[Link]</a> <i>(SCIE, IF Top 44.932% (67/148) in PHYSICS, APPLIED, based on JCR 2018)</i>
-- [J4] Alfian, G., <b>Syafrudin, M.</b>, Ijaz, M.F., Syaekhoni, M.A., Fitriyani, N.L., Rhee, J. A Personalized Healthcare Monitoring System for Diabetic Patients by Utilizing BLE-Based Sensors and Real-Time Data Processing. *Sensors 2018*, 18, 2183. <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.3390/s18072183'>[Link]</a> <i>(SCIE, IF Top 25.410% (16/61) in INSTRUMENTS & INSTRUMENTATION, based on JCR 2017)</i>
-- [C7] <b>Syafrudin, M.</b>, Lee, K., Alfian, G., Jaeho, L., Rhee, J. Application of Bluetooth Low Energy-Based Real-Time Location System for Indoor Environments. *2018 2nd International Conference on Big Data and Internet of Things*. October 24 - 26. Beijing, China: ACM Digital Library. <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1145/3289430.3289470'>[Link]</a>
-- [C6] Alfian, G., Ijaz, M.F., <b>Syafrudin, M.</b>, Jaeho, L., Rhee, J. A Low Cost IoT-based Traceability System for Perishable Food Supply Chain. *The 2018 World Congress on Information Technology Applications and Services*. February 20-22. Jeju, Korea: KIPS.
-### 2017
-- [J3] <b>Syafrudin, M.</b>, Fitriyani, N.L., Li, D., Alfian, G., Rhee, J., Kang, Y.-S. An Open Source-Based Real-Time Data Processing Architecture Framework for Manufacturing Sustainability. *Sustainability 2017*, 9, 2139. <a target='_blank' alt='link' rel='noopener noreferrer' href='http://dx.doi.org/10.3390/su9112139'>[Link]</a> <i>(SSCI, IF Top 41.667% (3/6) in GREEN & SUSTAINABLE SCIENCE & TECHNOLOGY, based on JCR 2017)</i>
-- [J2] Alfian, G., <b>Syafrudin, M.</b>, Rhee, J. Real-Time Monitoring System Using Smartphone-Based Sensors and NoSQL Database for Perishable Supply Chain. *Sustainability 2017*, 9, 2073. <a target='_blank' alt='link' rel='noopener noreferrer' href='http://dx.doi.org/10.3390/su9112073'>[Link]</a> <i>(SSCI, IF Top 41.667% (3/6) in GREEN & SUSTAINABLE SCIENCE & TECHNOLOGY, based on JCR 2017)</i>
-- [J1] Alfian, G., Rhee, J., Ijaz, M.F., <b>Syafrudin, M.</b>, Fitriyani, N.L. Performance Analysis of a Forecasting Relocation Model for One-Way Carsharing. *Appl. Sci. 2017*, 7, 598. <a target='_blank' alt='link' rel='noopener noreferrer' href='http://dx.doi.org/10.3390/app7060598'>[Link]</a> <i>(SCIE, IF Top 50.338% (75/148) in PHYSICS, APPLIED, based on JCR 2016)</i>
-- [C5] <b>Syafrudin, M.</b>, Lee, K., Fitriyani, N.L., Alfian, G., Rhee, J. Real time monitoring system based on IoT sensor data for assembly line process in the automotive factory. *Korean Society of Manufacturing Technology Engineers Annual Autumn Conference 2017*. December 6-8. Jeju, Korea: KSMTE. <a target='_blank' alt='link' rel='noopener noreferrer' href='http://www.dbpia.co.kr/Journal/ArticleDetail/NODE07285510'>[Link]</a>
-- [C4] <b>Syafrudin, M.</b>, Lee, K., Fitriyani, N.L., Alfian, G., Rhee, J. Development of Real-time Prediction System Based on Random Forest Algorithm in Smart Factory. *Korea Business Intelligence Data Mining Society Fall Conference 2017*. November 24-25. Busan, Korea: KDMS. <a target='_blank' alt='link' rel='noopener noreferrer' href='http://kdms.or.kr/board/read.asp?table=notice&m_no=253'>[Link]</a>
-- [C3] Kang, Y.-S, <b>Syafrudin, M.</b>, Fitriyani, N.L., Won, J., Lee, Y.-H., Rhee, J. Development of Distributed Processing System for Real-time Sensor Data : Injection Molding Process. *Proceedings of Korean Society for Precision Engineering 2017 Spring Conference*. May 17-19. Jeju, Korea: KSPE, 574-574. <a target='_blank' alt='link' rel='noopener noreferrer' href='http://www.dbpia.co.kr/Journal/ArticleDetail/NODE07205708'>[Link]</a>
-
-### 2016
-- [C2] Fitriyani, N.L., Yang, C-K., <b>Syafrudin, M.</b> Real-time eye state detection system using haar cascade classifier and circular hough transform. *2016 IEEE 5th Global Conference on Consumer Electronics*. October 11-14. Kyoto, Japan: IEEE. <a target='_blank' alt='link' rel='noopener noreferrer' href='http://ieeexplore.ieee.org/document/7800424/'>[Link]</a>
-- [C1] <b>Syafrudin, M.</b>, Lee, Y.-H. A Quality Prediction as a Service for Manufacturing Small and Medium-sized Enterprises (SMEs). *International Symposium on Green Manufacturing and Applications 2016*. June 21-25. Bali, Indonesia: KSPE and ISGMA. <a target='_blank' alt='link' rel='noopener noreferrer' href='http://2016.isgma.org/data/2016/04-ISGMA2016_pdf.zip'>[Link]</a>
+ 
 
 
 *Note: Science Citation Index Expanded (SCIE), Science Citation Index (SCI), Social Sciences Citation Index (SSCI) Impact Factor (IF), Journal Citation Reports (JCR) is trademark of Web of Science Group - Clarivate. *
