--- a/src/pages/team.mdx
+++ b/src/pages/team.mdx
@@ -36,7 +36,7 @@ title: Team
 ### <highlight  color="#0184c6">Undergraduate</highlight>
 
 <div class="row">
-<div class="col col--2"><img class="circular--square" src="https://www.svgrepo.com/show/82208/female-avatar.svg"/></div>
+<div class="col col--2"><img class="circular--square" src="/team/ahyun_2023.jpg"/></div>
 <div class="col col--10">
 <h3>이아현 (Ahyun Lee)</h3>
 Department of Artificial Intelligence, Sejong University, Korea
@@ -50,7 +50,7 @@ Department of Artificial Intelligence, Sejong University, Korea
 </div>
 
 <div class="row">
-<div class="col col--2"><img class="circular--square" src="https://www.svgrepo.com/show/82208/female-avatar.svg"/></div>
+<div class="col col--2"></div>
 <div class="col col--10">
 <h3>박수진 (Sujin Park)</h3>
 Department of Artificial Intelligence, Sejong University, Korea
