add pub and colab message
- add new publication
- add new collaboration messages

--- a/src/pages/publications.mdx
+++ b/src/pages/publications.mdx
@@ -13,20 +13,20 @@ Links: <a target='_blank' alt='link' rel='noopener noreferrer' href='https://www
 
 ### [J] Journal Articles
 <ol reversed>
-<li>Nasir, I.M., Raza, M., Ulyah, S.M., Shah, J.H., Fitriyani, N.L., Syafrudin, M.* (2023) ENGA: Elastic Net-Based Genetic Algorithm for Human Action Recognition. Expert Systems with Applications, 227, 120311, doi:10.1016/j.eswa.2023.120311.</li>
-<li>Ramaha, N.T.A., Mahmood, R.M., Hameed, A.A., Fitriyani, N.L., Alfian, G., Syafrudin, M.* (2023) Brain Pathology Classification of MR Images Using Machine Learning Techniques. Computers, 12, 167, doi:10.3390/computers12080167.</li>
-<li>Isia, I., Hadibarata, T., Jusoh, M.N.H., Bhattacharjya, R.K., Shahedan, N.F., Fitriyani, N.L., Syafrudin, M.* (2023) Identifying Factors to Develop and Validate Social Vulnerability to Floods in Malaysia: A Systematic Review Study. Sustainability, 15, 12729, doi:10.3390/su151712729.</li>
-<li>Fitriyani, N.L., Syafrudin, M.*, Ulyah, S.M., Alfian, G., Qolbiyani, S.L., Yang, C.-K., Rhee, J., Anshari, M. (2023) Performance Analysis and Assessment of Type 2 Diabetes Screening Scores in Patients with Non-Alcoholic Fatty Liver Disease. Mathematics, 11, 2266, doi:10.3390/math11102266.</li>
-<li>Maarif, M.R., Saleh, A.R., Habibi, M., Fitriyani, N.L., Syafrudin, M.* (2023) Energy Usage Forecasting Model Based on Long Short-Term Memory (LSTM) and EXplainable Artificial Intelligence (XAI). Information, 14, 265, doi:10.3390/info14050265.</li>
-<li>Alfian, G., Syafrudin, M.*, Fitriyani, N.L., Alam, S., Pratomo, D.N., Subekti, L., Octava, M.Q.H., Yulianingsih, N.D., Atmaji, F.T.D., Benes, F. (2023) Utilizing Random Forest with IForest-Based Outlier Detection and SMOTE to Detect Movement and Direction of RFID Tags. Future Internet, 15, 103, doi:10.3390/fi15030103.</li>
-<li>Anshari, M., Syafrudin, M.*, Tan, A., Fitriyani, N.L., Alas, Y. (2023) Optimisation of Knowledge Management (KM) with Machine Learning (ML) Enabled. Information, 14, 35, doi:10.3390/info14010035.</li>
-<li>Al-Dulaimi, A.A., Guneser, M.T., Hameed, A.A., Márquez, F.P.G., Fitriyani, N.L., Syafrudin, M.* (2023) Performance Analysis of Classification and Detection for PV Panel Motion Blur Images Based on Deblurring and Deep Learning Techniques. Sustainability, 15, 1150, doi:10.3390/su15021150.</li>
-<li>Zhao, W., Syafrudin, M.*, Fitriyani, N.L. (2023) CRAS-YOLO: A Novel Multi-Category Vessel Detection and Classification Model Based on YOLOv5s Algorithm. IEEE Access, 11, 11463–11478, doi:10.1109/ACCESS.2023.3241630.</li>
-<li>Isia, I., Hadibarata, T., Jusoh, M.N.H., Bhattacharjya, R.K., Shahedan, N.F., Bouaissi, A., Fitriyani, N.L., Syafrudin, M.* (2023) Drought Analysis Based on Standardized Precipitation Evapotranspiration Index and Standardized Precipitation Index in Sarawak, Malaysia. Sustainability, 15, 734, doi:10.3390/su15010734.</li>
-<li>Prananda, A.R., Frannita, E.L., Hutami, A.H.T., Maarif, M.R., Fitriyani, N.L., Syafrudin, M.* (2023) Retinal Nerve Fiber Layer Analysis Using Deep Learning to Improve Glaucoma Detection in Eye Disease Assessment. Applied Sciences, 13, 37, doi:10.3390/app13010037.</li>
-<li>Anshari, M., Syafrudin, M.*, Fitriyani, N.L., Razzaq, A. (2022) Ethical Responsibility and Sustainability (ERS) Development in a Metaverse Business Model. Sustainability, 14, 15805, doi:10.3390/su142315805.</li>
-<li>Fitriyani, N.L., Syafrudin, M.*, Ulyah, S.M., Alfian, G., Qolbiyani, S.L., Anshari, M. (2022) A Comprehensive Analysis of Chinese, Japanese, Korean, US-PIMA Indian, and Trinidadian Screening Scores for Diabetes Risk Assessment and Prediction. Mathematics, 10, 4027.</li>
-<li>Maarif, M. R., Listyanda, R. F., Kang, Y. S., & Syafrudin, M.* (2022). Artificial Neural Network Training Using Structural Learning with Forgetting for Parameter Analysis of Injection Molding Quality Prediction. Information, 13(10), 488.</li>
+<li>Nasir, I.M., Raza, M., Ulyah, S.M., Shah, J.H., Fitriyani, N.L., <b>Syafrudin, M.*</b> (2023) ENGA: Elastic Net-Based Genetic Algorithm for Human Action Recognition. Expert Systems with Applications, 227, 120311, doi:10.1016/j.eswa.2023.120311.</li>
+<li>Ramaha, N.T.A., Mahmood, R.M., Hameed, A.A., Fitriyani, N.L., Alfian, G., <b>Syafrudin, M.*</b> (2023) Brain Pathology Classification of MR Images Using Machine Learning Techniques. Computers, 12, 167, doi:10.3390/computers12080167.</li>
+<li>Isia, I., Hadibarata, T., Jusoh, M.N.H., Bhattacharjya, R.K., Shahedan, N.F., Fitriyani, N.L., <b>Syafrudin, M.*</b> (2023) Identifying Factors to Develop and Validate Social Vulnerability to Floods in Malaysia: A Systematic Review Study. Sustainability, 15, 12729, doi:10.3390/su151712729.</li>
+<li>Fitriyani, N.L., <b>Syafrudin, M.*</b>, Ulyah, S.M., Alfian, G., Qolbiyani, S.L., Yang, C.-K., Rhee, J., Anshari, M. (2023) Performance Analysis and Assessment of Type 2 Diabetes Screening Scores in Patients with Non-Alcoholic Fatty Liver Disease. Mathematics, 11, 2266, doi:10.3390/math11102266.</li>
+<li>Maarif, M.R., Saleh, A.R., Habibi, M., Fitriyani, N.L., <b>Syafrudin, M.*</b> (2023) Energy Usage Forecasting Model Based on Long Short-Term Memory (LSTM) and EXplainable Artificial Intelligence (XAI). Information, 14, 265, doi:10.3390/info14050265.</li>
+<li>Alfian, G., <b>Syafrudin, M.*</b>, Fitriyani, N.L., Alam, S., Pratomo, D.N., Subekti, L., Octava, M.Q.H., Yulianingsih, N.D., Atmaji, F.T.D., Benes, F. (2023) Utilizing Random Forest with IForest-Based Outlier Detection and SMOTE to Detect Movement and Direction of RFID Tags. Future Internet, 15, 103, doi:10.3390/fi15030103.</li>
+<li>Anshari, M., <b>Syafrudin, M.*</b>, Tan, A., Fitriyani, N.L., Alas, Y. (2023) Optimisation of Knowledge Management (KM) with Machine Learning (ML) Enabled. Information, 14, 35, doi:10.3390/info14010035.</li>
+<li>Al-Dulaimi, A.A., Guneser, M.T., Hameed, A.A., Márquez, F.P.G., Fitriyani, N.L., <b>Syafrudin, M.*</b> (2023) Performance Analysis of Classification and Detection for PV Panel Motion Blur Images Based on Deblurring and Deep Learning Techniques. Sustainability, 15, 1150, doi:10.3390/su15021150.</li>
+<li>Zhao, W., <b>Syafrudin, M.*</b>, Fitriyani, N.L. (2023) CRAS-YOLO: A Novel Multi-Category Vessel Detection and Classification Model Based on YOLOv5s Algorithm. IEEE Access, 11, 11463–11478, doi:10.1109/ACCESS.2023.3241630.</li>
+<li>Isia, I., Hadibarata, T., Jusoh, M.N.H., Bhattacharjya, R.K., Shahedan, N.F., Bouaissi, A., Fitriyani, N.L., <b>Syafrudin, M.*</b> (2023) Drought Analysis Based on Standardized Precipitation Evapotranspiration Index and Standardized Precipitation Index in Sarawak, Malaysia. Sustainability, 15, 734, doi:10.3390/su15010734.</li>
+<li>Prananda, A.R., Frannita, E.L., Hutami, A.H.T., Maarif, M.R., Fitriyani, N.L., <b>Syafrudin, M.*</b> (2023) Retinal Nerve Fiber Layer Analysis Using Deep Learning to Improve Glaucoma Detection in Eye Disease Assessment. Applied Sciences, 13, 37, doi:10.3390/app13010037.</li>
+<li>Anshari, M., <b>Syafrudin, M.*</b>, Fitriyani, N.L., Razzaq, A. (2022) Ethical Responsibility and Sustainability (ERS) Development in a Metaverse Business Model. Sustainability, 14, 15805, doi:10.3390/su142315805.</li>
+<li>Fitriyani, N.L., <b>Syafrudin, M.*</b>, Ulyah, S.M., Alfian, G., Qolbiyani, S.L., Anshari, M. (2022) A Comprehensive Analysis of Chinese, Japanese, Korean, US-PIMA Indian, and Trinidadian Screening Scores for Diabetes Risk Assessment and Prediction. Mathematics, 10, 4027.</li>
+<li>Maarif, M. R., Listyanda, R. F., Kang, Y. S., & <b>Syafrudin, M.*</b> (2022). Artificial Neural Network Training Using Structural Learning with Forgetting for Parameter Analysis of Injection Molding Quality Prediction. Information, 13(10), 488.</li>
 <li>Alfian, G., <b>Syafrudin, M.*</b>, Fahrurrozi, I., Fitriyani, N.L., Atmaji, F.T.D., Widodo, T., Bahiyah, N., Benes, F., Rhee, J. Predicting Breast Cancer from Risk Factors Using SVM and Extra-Trees-Based Feature Selection Method. <i>Computers</i> 2022, 11, 136, doi:10.3390/computers11090136. <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.3390/computers11090136'>[Link]</a></li>
 <li>Anshari, M., <b>Syafrudin, M.*</b>, Fitriyani, N.L. Fourth Industrial Revolution between Knowledge Management and Digital Humanities. <i>Information</i> 2022, 13, 292, doi:10.3390/info13060292. <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.3390/info13060292'>[Link]</a></li>
 <li>Kristanti, R.A., Hadibarata, T., <b>Syafrudin, M.</b>, Yılmaz, M., Abdullah, S. Microbiological Contaminants in Drinking Water: Current Status and Challenges. <i>Water Air Soil Pollut 2022</i>, 233, 299, <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1007/s11270-022-05698-3'>[Link]</a></li>
@@ -56,10 +56,12 @@ Links: <a target='_blank' alt='link' rel='noopener noreferrer' href='https://www
 
 ### [C] Conference Proceedings
 <ol reversed>
-<li>Lee, A., <b>Syafrudin, M.</b>, Gu, Y., Park, S., Kim, M., Lee, Y. A Personalized Restaurant Recommendation Based on Topic Modeling of Online Reviews. In Proceedings of the 2023 International Conference on Innovation and Intelligence for Informatics, Computing, and Technologies (3ICT) (3ICT2023); Bahrain, Bahrain, November 2023; p. 6.<a target='_blank' alt='link' rel='noopener noreferrer' href='#'>[Link]</a></li>
-<li>Sugiantoro, B., Humam, A.I., Fitriyani, N.L., Alfian, G., Maarif, M.R., <b>Syafrudin, M.</b> Utilizing Latent Dirichlet Allocation for Analyzing Topics in Undergraduate Theses. In Proceedings of the 2023 10th International Conference on Information Technology, Computer, and Electrical Engineering (ICITACEE) (ICITACEE 2023); Indonesia, August 2023; p. 6. <a target='_blank' alt='link' rel='noopener noreferrer' href='#'>[Link]</a>
+<li>Asrol, M., Alamsjah, F., Olivia, M., Suharjito, Harito, C., <b>Syafrudin, M.</b> An Analysis and Design of Adaptive Assessment System for Manufacturing Industry 4.0 Implementation in Indonesia. E3S Web Conf. 2023, 426, 01012, <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1051/e3sconf/202342601012'>[Link]</a>.
 </li>
-<li><b>Syafrudin, M.</b>, Alfian, G., Fitriyani, N.L., Hadibarata, T., Rhee, J., Anshari, M. Future Glycemic Events Prediction Model Based On Artificial Neural Network. In Proceedings of the 2022 International Conference on Innovation and Intelligence for Informatics, Computing, and Technologies (3ICT); IEEE: Sakheer, Bahrain, November 20 2022; pp. 151–155.<a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1109/3ICT56508.2022.9990708'>[Link]</a></li>
+<li>Lee, A., <b>Syafrudin, M.</b>, Gu, Y., Park, S., Kim, M., Lee, Y. A Personalized Restaurant Recommendation Based on Topic Modeling of Online Reviews. In Proceedings of the 2023 International Conference on Innovation and Intelligence for Informatics, Computing, and Technologies (3ICT) (3ICT2023), Bahrain, Bahrain, November 2023, p. 6.<a target='_blank' alt='link' rel='noopener noreferrer' href='#'>[Link]</a></li>
+<li>Sugiantoro, B., Humam, A.I., Fitriyani, N.L., Alfian, G., Maarif, M.R., <b>Syafrudin, M.</b> Utilizing Latent Dirichlet Allocation for Analyzing Topics in Undergraduate Theses. In Proceedings of the 2023 10th International Conference on Information Technology, Computer, and Electrical Engineering (ICITACEE) (ICITACEE 2023), Indonesia, August 2023, p. 6. <a target='_blank' alt='link' rel='noopener noreferrer' href='#'>[Link]</a>
+</li>
+<li><b>Syafrudin, M.</b>, Alfian, G., Fitriyani, N.L., Hadibarata, T., Rhee, J., Anshari, M. Future Glycemic Events Prediction Model Based On Artificial Neural Network. In Proceedings of the 2022 International Conference on Innovation and Intelligence for Informatics, Computing, and Technologies (3ICT), IEEE: Sakheer, Bahrain, November 20 2022, pp. 151–155.<a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1109/3ICT56508.2022.9990708'>[Link]</a></li>
 <li>Fitriyani, N. L., <b>Syafrudin, M.</b>, Alfian, G., Yang, C. K., Rhee, J., & Ulyah, S. M. Chronic Disease Prediction Model Using Integration of DBSCAN, SMOTE-ENN, and Random Forest. In 2022 ASU International Conference in Emerging Technologies for Sustainability and Intelligent Systems (ICETSIS) (pp. 289-294). IEEE.<a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1109/ICETSIS55481.2022.9888806'>[Link]</a></li>
 <li><b>Syafrudin, M.</b>, Alfian, G., Fitriyani, N. L., Fahrurrozi, I., Anshari, M., & Rhee, J. A Personalized Blood Glucose Prediction Model Using Random Forest Regression. In 2022 ASU International Conference in Emerging Technologies for Sustainability and Intelligent Systems (ICETSIS) (pp. 295-299). IEEE.<a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1109/ICETSIS55481.2022.9888838'>[Link]</a></li>
 <li>Fitriyani, N. L., <b>Syafrudin, M.</b>, & Alfian, G. Improving Accuracy of Machine Learning-Based Prediction Model for Heart Disease Classification Using Information Gain and DBSCAN. In KMIS International Conference (pp. 506-509).<a target='_blank' alt='link' rel='noopener noreferrer' href='https://www.earticle.net/Article/A416370'>[Link]</a></li>
@@ -82,9 +84,9 @@ Links: <a target='_blank' alt='link' rel='noopener noreferrer' href='https://www
 
 ### [B] Books / Chapters
 <ol reversed>
-<li>Anshari, M., <b>Syafrudin, M.</b>, Fitriyani, N.L., Al-Mudimigh, A. Ethical Concerns in the Metaverse Business: In Advances in E-Business Research; Anshari, M., Syafrudin, M., Alfian, G., Eds.; IGI Global, 2023; pp. 35–47 ISBN 978-1-66846-097-9, <a target='_blank' alt='link' rel='noopener noreferrer' href='https://dx.doi.org/10.4018/978-1-6684-6097-9.ch003'>[Link]</a></li>
-<li>Metaverse Applications for New Business Models and Disruptive Innovation:; Anshari, M., <b>Syafrudin, M.</b>, Alfian, G., Eds.; Advances in E-Business Research; IGI Global, 2023; ISBN 978-1-66846-097-9, <a target='_blank' alt='link' rel='noopener noreferrer' href='http://dx.doi.org/10.4018/978-1-6684-6097-9'>[Link]</a></li>
-<li>Alfian, G., <b>Syafrudin, M.*</b>, Fitriyani, N.L., Syaekhoni, M.A., Rhee, J. Utilizing IoT-Based Sensors and Prediction Model for Health-Care Monitoring System. <i>In Artificial Intelligence and Big Data Analytics for Smart Healthcare</i>; Elsevier, 2021; pp. 63–80 ISBN 978-0-12-822060-3. <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1016/B978-0-12-822060-3.00009-7'>[Link]</a></li>
+<li>Anshari, M., <b>Syafrudin, M.</b>, Fitriyani, N.L., Al-Mudimigh, A. Ethical Concerns in the Metaverse Business: In Advances in E-Business Research, Anshari, M., Syafrudin, M., Alfian, G., Eds., IGI Global, 2023, pp. 35–47 ISBN 978-1-66846-097-9, <a target='_blank' alt='link' rel='noopener noreferrer' href='https://dx.doi.org/10.4018/978-1-6684-6097-9.ch003'>[Link]</a></li>
+<li>Metaverse Applications for New Business Models and Disruptive Innovation:, Anshari, M., <b>Syafrudin, M.</b>, Alfian, G., Eds., Advances in E-Business Research, IGI Global, 2023, ISBN 978-1-66846-097-9, <a target='_blank' alt='link' rel='noopener noreferrer' href='http://dx.doi.org/10.4018/978-1-6684-6097-9'>[Link]</a></li>
+<li>Alfian, G., <b>Syafrudin, M.*</b>, Fitriyani, N.L., Syaekhoni, M.A., Rhee, J. Utilizing IoT-Based Sensors and Prediction Model for Health-Care Monitoring System. <i>In Artificial Intelligence and Big Data Analytics for Smart Healthcare</i>, Elsevier, 2021, pp. 63–80 ISBN 978-0-12-822060-3. <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1016/B978-0-12-822060-3.00009-7'>[Link]</a></li>
 </ol>
 
  
