--- a/src/pages/team.mdx
+++ b/src/pages/team.mdx
@@ -13,7 +13,7 @@ title: Team
 <i>Assistant Professor</i>
 <br/>Department of Artificial Intelligence, Sejong University, Korea
 <br/>Office: No. 502, Daeyang AI Center, Sejong University
-<br/>Email: udin [at] sejong [dot] ac [dot] kr
+<br/>Email: udin[at]sejong.ac.kr (please change [at] with @)
 <br/>Tel.: +82-2-3408-1879
 <br/>ORCID: <a href="https://orcid.org/0000-0002-5640-4413" target="_blank">0000-0002-5640-4413</a>
 <br/><br/>
@@ -80,6 +80,12 @@ Department of Artificial Intelligence, Sejong University, Korea
 - Muhammet Tahir Guneser, Karabuk University, Turkey
 - Inzamam Mashood Nasir, HITEC University, Pakistan
 - Wenxiao Zhao, Beijing Normal University, China
+- Muhammad Asrol, BINUS University, Indonesia
 
 
-*If you are interested in collaborating with us on research or joining our team, please kindly send an email to the director.*
+*We welcome and encourage the following types of collaborations that can enhance our research:
+- Joint-publications 
+- Joint-projects
+- Visiting programs
+
+If you are interested in collaborating with us, please send an email to the director. We believe that such mutual and fruitful collaborations can lead to significant advancements in research.
