--- a/src/pages/team.mdx
+++ b/src/pages/team.mdx
@@ -41,7 +41,7 @@ title: Team
 <h3>이아현 (Ahyun Lee)</h3>
 Department of Artificial Intelligence, Sejong University, Korea
 <br/>Research interest: text mining
-<br/>Email: ahyunclara [at] sju [dot] ac [dot] kr
+<br/>Email: ahyunclara[at]sju.ac.kr
 <br/>Publications:
 <ul>
 <li>[First author] <b>Lee, A.</b>, Syafrudin, M., Gu, Y. H., Park, S., Kim, M., & Lee, Y. (2023). <i>A Personalized Restaurant Recommendation Based on Topic Modeling of Online Reviews</i>. 2023 International Conference on Innovation and Intelligence for Informatics, Computing, and Technologies (3ICT) (3ICT2023), 6.</li>
@@ -55,7 +55,7 @@ Department of Artificial Intelligence, Sejong University, Korea
 <h3>박수진 (Sujin Park)</h3>
 Department of Artificial Intelligence, Sejong University, Korea
 <br/>Research interest: machine learning
-<br/>Email: sujin76 [at] sju [dot] ac [dot] kr
+<br/>Email: sujin76[at]sju.ac.kr
 <br/>Publications:
 <ul>
 <li>[Co-author] Lee, A., Syafrudin, M., Gu, Y. H., <b>Park, S.</b>, Kim, M., & Lee, Y. (2023). <i>A Personalized Restaurant Recommendation Based on Topic Modeling of Online Reviews</i>. 2023 International Conference on Innovation and Intelligence for Informatics, Computing, and Technologies (3ICT) (3ICT2023), 6.</li>
