--- a/src/pages/team.mdx
+++ b/src/pages/team.mdx
@@ -83,9 +83,5 @@ Department of Artificial Intelligence, Sejong University, Korea
 - Muhammad Asrol, BINUS University, Indonesia
 
 
-*We welcome and encourage the following types of collaborations that can enhance our research:*
-*- Joint-publications*
-*- Joint-projects*
-*- Visiting programs*
-
-*If you are interested in collaborating with us, please send an email to the director. We believe that such mutual and fruitful collaborations can lead to significant advancements in research.*
+*We welcome and encourage the following types of collaborations: joint-research publications, joint-projects, visiting programs, etc. that can enhance our research. We believe that such mutual and fruitful collaborations can lead to significant advancements in research.
+*If you are interested in collaborating with us, please send an email to the director.*
