--- a/src/pages/team.mdx
+++ b/src/pages/team.mdx
@@ -6,7 +6,7 @@ title: Team
 
 ### <highlight  color="#04be58">Director</highlight>
 <div class="row">
-<div class="col col--2"><img class="circular--square" src="https://sejong.elsevierpure.com/files-asset/32175677/Muhammad_Syafrudin_200px.jpg?f=webp"/></div>
+<div class="col col--2"><img class="circular--square" src="/team/Muhammad_Syafrudin.jpg"/></div>
 
 <div class="col col--10">
 <h3>Muhammad Syafrudin</h3>
@@ -62,6 +62,16 @@ Department of Artificial Intelligence, Sejong University, Korea
 </ul>
 </div>
 </div>
+
+
+<i>만약 학부 인턴으로 참여에 관심이 있으시면 언제든지 저에게 연락 주십시오. 여러분은 자신만의 연구 프로젝트를 수행할 기회가 있을 것이며, 여러분의 학습 여정 동안 멘토로서 기쁨을 나눌 수 있습니다. 이전에 우리는 다른 학생들이 프로젝트를 기반으로 연구 논문을 발표하는 데 도움을 준 바 있으며, 비슷한 노력에 여러분을 지원하고 싶어 합니다.</i>
+
+
+### <highlight  color="#0184c6">Master/PhD</highlight>
+
+YOU?
+
+<i>Please refer to the following link for detailed information on the admissions procedure, requirements, and scholarship details: <a href="https://sos.sejong.ac.kr/eng/admission/guide/grad1.do" target="_blank">https://sos.sejong.ac.kr/eng/admission/guide/grad1.do</a> </i> 
 
 
 ### <highlight  color="#980606">Research Collaborator</highlight>
