--- a/src/pages/team.mdx
+++ b/src/pages/team.mdx
@@ -62,9 +62,8 @@ Department of Artificial Intelligence, Sejong University, Korea
 </ul>
 </div>
 </div>
-<br/>
 <i>만약 학부 인턴으로 참여에 관심이 있으시면 언제든지 저에게 연락 주십시오. 여러분은 자신만의 연구 프로젝트를 수행할 기회가 있을 것이며, 여러분의 학습 여정 동안 멘토로서 기쁨을 나눌 수 있습니다. 이전에 우리는 다른 학생들이 프로젝트를 기반으로 연구 논문을 발표하는 데 도움을 준 바 있으며, 비슷한 노력에 여러분을 지원하고 싶어 합니다.</i>
-<br/>
+<br/><br/><br/>
 
 
 ### <highlight  color="#0184c6">Master/PhD</highlight>
@@ -94,6 +93,11 @@ YOU?
 - Wenxiao Zhao, Beijing Normal University, China
 - Muhammad Asrol, BINUS University, Indonesia
 
+<br/>
+<i>Explore the collaboration map from the past five years by clicking on the map to view detailed information.<i/><br/>
+<a href="https://sejong.elsevierpure.com/en/persons/muhammad-syafrudin/network-map#network-map-container" target="_blank">
+<img src="/team/collaboration_map_v20240102.png"/></a><br/>
+<br/>
 
 *We welcome and encourage the following types of collaborations: joint-research publications, joint-projects, visiting programs, etc. that can enhance our research. We believe that such mutual and fruitful collaborations can lead to significant advancements in research.*
 *If you are interested in collaborating with us, please send an email to the director.*
