--- a/src/pages/team.mdx
+++ b/src/pages/team.mdx
@@ -73,8 +73,6 @@ YOU?
 <i>Please refer to the following link for detailed information on the admissions procedure, requirements, and scholarship details: <a href="https://sos.sejong.ac.kr/eng/admission/guide/grad1.do" target="_blank">https://sos.sejong.ac.kr/eng/admission/guide/grad1.do</a> </i> 
 <br/><br/>
 
-
-
 ### <highlight  color="#980606">Research Collaborator</highlight>
 
 - Muhammad Anshari, Universiti Brunei Darussalam (UBD), Brunei
@@ -94,9 +92,8 @@ YOU?
 - Muhammad Asrol, BINUS University, Indonesia
 
 <br/>
-<i>Explore the collaboration map from the past five years by clicking on the map to view detailed information.<i/><br/>
-<a href="https://sejong.elsevierpure.com/en/persons/muhammad-syafrudin/network-map#network-map-container" target="_blank">
-<img src="/team/collaboration_map_v20240102.png"/></a><br/>
+<i>Explore the collaboration map from the past five years by clicking on the map to view detailed information.</i><br/>
+<a href="https://sejong.elsevierpure.com/en/persons/muhammad-syafrudin/network-map#network-map-container" target="_blank"><img src="/team/collaboration_map_v20240102.png"/></a><br/>
 <br/>
 
 *We welcome and encourage the following types of collaborations: joint-research publications, joint-projects, visiting programs, etc. that can enhance our research. We believe that such mutual and fruitful collaborations can lead to significant advancements in research.*
