--- a/src/pages/publications.mdx
+++ b/src/pages/publications.mdx
@@ -14,7 +14,10 @@ Links: <a target='_blank' alt='link' rel='noopener noreferrer' href='https://www
 ### [J] Journal Articles
 <ol reversed>
 
-<li>Abdulrazzaq, M.M.; Ramaha, N.T.A.; Hameed, A.A.; Salman, M.; Yon, D.K.; Fitriyani, N.L.; <b>Syafrudin, M.*</b>; Lee, S.W. Consequential Advancements of Self-Supervised Learning (SSL) in Deep Learning Contexts. Mathematics 2024, 12, 758. https://doi.org/10.3390/math12050758 <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.3390/math12050758'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:pyW8ca7W8N0C'>[GoogleScholar]</a></li>
+
+<li><b>Syafrudin, M.</b>, Alfian, G., Fitriyani, N.L., Anshari, M. Applied Artificial Intelligence for Sustainability. Sustainability 2024, 16, 2469. https://doi.org/10.3390/su16062469 <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.3390/su16062469'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.co.kr/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:bFI3QPDXJZMC'>[GoogleScholar]</a></li>
+<li>Kusumaningrum, R., Khoerunnisa, S.F., Khadijah, K., <b>Syafrudin, M.*</b> Exploring Community Awareness of Mangrove Ecosystem Preservation through Sentence-BERT and K-Means Clustering. Information 2024, 15, 165. https://doi.org/10.3390/info15030165 <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.3390/info15030165'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.co.kr/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:f2IySw72cVMC>[GoogleScholar]</a></li>
+<li>Abdulrazzaq, M.M., Ramaha, N.T.A., Hameed, A.A., Salman, M., Yon, D.K., Fitriyani, N.L., <b>Syafrudin, M.*</b>, Lee, S.W. Consequential Advancements of Self-Supervised Learning (SSL) in Deep Learning Contexts. Mathematics 2024, 12, 758. https://doi.org/10.3390/math12050758 <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.3390/math12050758'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:pyW8ca7W8N0C'>[GoogleScholar]</a></li>
 <li>Maarif, M.R., <b>Syafrudin, M.*</b>, Fitriyani, N.L. (2024) Uncovering Sustainability Insights from Amazon’s Eco-Friendly Product Reviews for Design Optimization. Sustainability 2024, 16, 172, https://doi.org/10.3390/su16010172 <a target='_blank' alt='link' rel='noopener noreferrer' href='https://dx.doi.org/10.3390/su16010172'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:a0OBvERweLwC'>[GoogleScholar]</a></li>
 <li>Alfian, G., Octava, M.Q.H., Hilmy, F.M., Nurhaliza, R.A., Saputra, Y.M., Putri, D.G.P., Syahrian, F., Fitriyani, N.L., Atmaji, F.T.D., Farooq, U., ... , <b>Syafrudin, M.*</b> (2023) Customer Shopping Behavior Analysis Using RFID and Machine Learning Models. Information 2023, 14, 551. https://doi.org/10.3390/info14100551, <a target='_blank' alt='link' rel='noopener noreferrer' href='https://dx.doi.org/10.3390/info14100551'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:dfsIfKJdRG4C'>[GoogleScholar]</a></li>
 <li>Nasir, I.M., Raza, M., Ulyah, S.M., Shah, J.H., Fitriyani, N.L., <b>Syafrudin, M.*</b> (2023) ENGA: Elastic Net-Based Genetic Algorithm for Human Action Recognition. Expert Systems with Applications, 227, 120311, doi:10.1016/j.eswa.2023.120311, <a target='_blank' alt='link' rel='noopener noreferrer' href='https://dx.doi.org/10.1016/j.eswa.2023.120311'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:3s1wT3WcHBgC'>[GoogleScholar]</a></li>
@@ -60,7 +63,7 @@ Links: <a target='_blank' alt='link' rel='noopener noreferrer' href='https://www
 
 ### [C] Conference Proceedings
 <ol reversed>
-<li>Asrol, M., Wahyudi, S.; Suharjito, Harito, C., Utama, D.N., <b>Syafrudin, M.</b> Improving Supplier Evaluation Model Using Ensemble Method-Machine Learning for Food Industry. Procedia Computer Science 2023, 227, 307–315, doi:10.1016/j.procs.2023.10.529. <a target='_blank' alt='link' rel='noopener noreferrer' href='https://dx.doi.org/10.1016/j.procs.2023.10.529'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/scholar_lookup?doi=10.1016/j.procs.2023.10.529'>[GoogleScholar]</a></li>
+<li>Asrol, M., Wahyudi, S., Suharjito, Harito, C., Utama, D.N., <b>Syafrudin, M.</b> Improving Supplier Evaluation Model Using Ensemble Method-Machine Learning for Food Industry. Procedia Computer Science 2023, 227, 307–315, doi:10.1016/j.procs.2023.10.529. <a target='_blank' alt='link' rel='noopener noreferrer' href='https://dx.doi.org/10.1016/j.procs.2023.10.529'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/scholar_lookup?doi=10.1016/j.procs.2023.10.529'>[GoogleScholar]</a></li>
 <li>Asrol, M., Alamsjah, F., Olivia, M., Suharjito, Harito, C., <b>Syafrudin, M.</b> An Analysis and Design of Adaptive Assessment System for Manufacturing Industry 4.0 Implementation in Indonesia. E3S Web Conf. 2023, 426, 01012, <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1051/e3sconf/202342601012'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/scholar_lookup?doi=10.1051/e3sconf/202342601012'>[GoogleScholar]</a>.</li>
 <li>Lee, A., <b>Syafrudin, M.</b>, Gu, Y., Park, S., Kim, M., Lee, Y. A Personalized Restaurant Recommendation Based on Topic Modeling of Online Reviews. In Proceedings of the 2023 International Conference on Innovation and Intelligence for Informatics, Computing, and Technologies (3ICT) (3ICT2023), Bahrain, Bahrain, November 2023, p. 6. <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1109/3ICT60104.2023.10391550'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/scholar_lookup?doi=10.1109/3ICT60104.2023.10391550'>[GoogleScholar]</a></li>
 <li>Sugiantoro, B., Humam, A. I., Fitriyani, N. L., Alfian, G., Maarif, M. R., & <b>Syafrudin, M.</b> (2023). Utilizing Latent Dirichlet Allocation for Analyzing Topics in Undergraduate Theses. 2023 10th International Conference on Information Technology, Computer, and Electrical Engineering (ICITACEE), 121–126, <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1109/ICITACEE58587.2023.10277046'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/scholar_lookup?doi=10.1109/ICITACEE58587.2023.10277046'>[GoogleScholar]</a></li>
