--- a/src/pages/publications.mdx
+++ b/src/pages/publications.mdx
@@ -7,7 +7,7 @@ The output of our research and projects has been presented and published in many
 
 Links: <a target='_blank' alt='link' rel='noopener noreferrer' href='https://www.webofscience.com/wos/author/record/1733012'>[WebofScience]</a> - <a target='_blank' alt='link' rel='noopener noreferrer' href='https://www.scopus.com/authid/detail.uri?authorId=57197741727'>[Scopus]</a> - <a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/citations?hl=en&user=WLTzkOMAAAAJ&view_op=list_works&sortby=pubdate'>[GoogleScholar]</a> 
 
-<highlight  color="#1877F2"><i>Note: </highlight><a href="#j-journal-articles">J = journal</a>, <a href="#c-conference-proceedings">C = conference</a>, <a href="#b-books--chapters">B = book/chapter</a>, and * = corresponding author.</i> 
+<highlight  color="#1877F2"><i>Note: </i></highlight><a href="#j-journal-articles">J = journal</a>, <a href="#c-conference-proceedings">C = conference</a>, <a href="#b-books--chapters">B = book/chapter</a>, and * = corresponding author.
 <br/>
 <br/>
 
