--- a/src/pages/team.mdx
+++ b/src/pages/team.mdx
@@ -40,7 +40,7 @@ title: Team
 <div class="col col--2"><img src="/team/ahyun_2023.jpg"/></div>
 <div class="col col--10">
 <h3>이아현 (Ahyun Lee)</h3>
-<br/>Research interest: text mining
+Research interest: text mining
 <br/>Email: ahyunclara[at]sju.ac.kr
 <br/>Publications:
 <ul>
@@ -53,7 +53,7 @@ title: Team
 <div class="col col--2"></div>
 <div class="col col--10">
 <h3>박수진 (Sujin Park)</h3>
-<br/>Research interest: machine learning
+Research interest: machine learning
 <br/>Email: sujin76[at]sju.ac.kr
 <br/>Publications:
 <ul>
