--- a/src/pages/publications.mdx
+++ b/src/pages/publications.mdx
@@ -14,6 +14,7 @@ Links: <a target='_blank' alt='link' rel='noopener noreferrer' href='https://www
 ### [J] Journal Articles
 <ol reversed>
 
+<li>Guneser, M.T., Seker, C., Guler, M.I., Fitriyani, N.L., <b>Syafrudin, M.*</b> (2024) Efficient 5.8 GHz Microstrip Antennas for Intelligent Transportation Systems: Design, Fabrication, and Performance Analysis. Mathematics 2024, 12, 1202. https://doi.org/10.3390/math12081202 <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.3390/math12081202'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.co.kr/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:EUQCXRtRnyEC'>[GoogleScholar]</a></li>
 <li>Mukhlif, Y.A., Ramaha, N.T.A., Hameed, A.A., Salman, M., Yon, D.K., Fitriyani, N.L., <b>Syafrudin, M.*</b>, Lee, S.W. (2024) Ant Colony and Whale Optimization Algorithms Aided by Neural Networks for Optimum Skin Lesion Diagnosis: A Thorough Review. Mathematics 2024, 12, 1049. https://doi.org/10.3390/math12071049 <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.3390/math12071049'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.co.kr/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:_xSYboBqXhAC'>[GoogleScholar]</a></li>
 <li><b>Syafrudin, M.</b>, Alfian, G., Fitriyani, N.L., Anshari, M. (2024) Applied Artificial Intelligence for Sustainability. Sustainability 2024, 16, 2469. https://doi.org/10.3390/su16062469 <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.3390/su16062469'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.co.kr/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:bFI3QPDXJZMC'>[GoogleScholar]</a></li>
 <li>Kusumaningrum, R., Khoerunnisa, S.F., Khadijah, K., <b>Syafrudin, M.*</b> (2024) Exploring Community Awareness of Mangrove Ecosystem Preservation through Sentence-BERT and K-Means Clustering. Information 2024, 15, 165. https://doi.org/10.3390/info15030165 <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.3390/info15030165'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.co.kr/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:f2IySw72cVMC'>[GoogleScholar]</a></li>
